Added exmpale with rice box for serving static files
